--- a/index.html
+++ b/index.html
@@ -2063,6 +2063,17 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -2070,6 +2081,11 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1145/3321707.3321790" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
@@ -2179,6 +2195,17 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -2186,6 +2213,11 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1145/3319619.3321988" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
@@ -2295,6 +2327,17 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -2302,6 +2345,11 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1145/3321707.3321797" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
