--- a/publication/ardeh-2019-genetic/index.html
+++ b/publication/ardeh-2019-genetic/index.html
@@ -570,6 +570,17 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -577,6 +588,11 @@
 
 
 
+
+
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1145/3319619.3321988" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
