--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/07/02, Boxiong Tan, practice on GECCO 2019 presentation. 2019/07/02, Shaolin Wang, practice on GECCO 2019 presentation. 2019/06/25, Mazhar Anzari Ardeh, practice on PhD proposal seminar. 2019/06/18, Prof Juergen Branke, Seminar: surrogate-assisted optimisation. 2019/06/03, Fangfang Zhang, discuss recent work on feature selection with GP. 2019/05/29, Ramya Anasseriyil Viswambaran, practice on PhD proposal seminar. 2019/05/22, Tao Shi, practice on PhD proposal seminar. 2019/05/14, Su Nguyen, human centric heuristic evolution for dynamic scheduling.">
+  <meta name="description" content="2019/07/30, Whole Group, discussions about lexicase selection in GP. 2019/07/23, Whole Group, share experience in GECCO2019. 2019/07/16, Shaolin Wang, practice on GECCO presentation again. 2019/07/09, Mazhar Anzari Ardeh, practice on PRICAI presentation. 2019/07/09, Mahdi Abdollahi, practice on PRICAI presentation. 2019/07/02, Boxiong Tan, practice on GECCO 2019 presentation. 2019/07/02, Shaolin Wang, practice on GECCO 2019 presentation. 2019/06/25, Mazhar Anzari Ardeh, practice on PhD proposal seminar. 2019/06/18, Prof Juergen Branke, Seminar: surrogate-assisted optimisation.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/07/02, Boxiong Tan, practice on GECCO 2019 presentation. 2019/07/02, Shaolin Wang, practice on GECCO 2019 presentation. 2019/06/25, Mazhar Anzari Ardeh, practice on PhD proposal seminar. 2019/06/18, Prof Juergen Branke, Seminar: surrogate-assisted optimisation. 2019/06/03, Fangfang Zhang, discuss recent work on feature selection with GP. 2019/05/29, Ramya Anasseriyil Viswambaran, practice on PhD proposal seminar. 2019/05/22, Tao Shi, practice on PhD proposal seminar. 2019/05/14, Su Nguyen, human centric heuristic evolution for dynamic scheduling."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/07/30, Whole Group, discussions about lexicase selection in GP. 2019/07/23, Whole Group, share experience in GECCO2019. 2019/07/16, Shaolin Wang, practice on GECCO presentation again. 2019/07/09, Mazhar Anzari Ardeh, practice on PRICAI presentation. 2019/07/09, Mahdi Abdollahi, practice on PRICAI presentation. 2019/07/02, Boxiong Tan, practice on GECCO 2019 presentation. 2019/07/02, Shaolin Wang, practice on GECCO 2019 presentation. 2019/06/25, Mazhar Anzari Ardeh, practice on PhD proposal seminar. 2019/06/18, Prof Juergen Branke, Seminar: surrogate-assisted optimisation."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,6 +503,11 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
+<li>2019/07/30, <strong>Whole Group</strong>, discussions about lexicase selection in GP.</li>
+<li>2019/07/23, <strong>Whole Group</strong>, share experience in GECCO2019.</li>
+<li>2019/07/16, Shaolin Wang, practice on GECCO presentation again.</li>
+<li>2019/07/09, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, practice on PRICAI presentation.</li>
+<li>2019/07/09, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></strong>, practice on PRICAI presentation.</li>
 <li>2019/07/02, <strong><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></strong>, practice on GECCO 2019 presentation.</li>
 <li>2019/07/02, Shaolin Wang, practice on GECCO 2019 presentation.</li>
 <li>2019/06/25, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, practice on PhD proposal seminar.</li>
