--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 
 <ul>
 <li><font color="red"><strong>[PhD Vacancy]</strong></font> I am looking for PhD/MSc/Honours/Summer Research students in <strong>Evolutionary Computation and Machine Learning for Scheduling and Combinatorial Optimisation</strong>. If you have similar research interests with me, please do not hesitate to <a href="#contact">contact</a> me.</li>
-<li><font color="red"><strong>[Call for papers]</strong></font> We are organising <a href="http://ssci2019.org/esco.html" target="_blank"><strong>IEEE Symposium on Evolutionary scheduling and combinatorial optimisation (IEEE ESCO)</strong></a>. Submission due date: <strong>July 10, 2019</strong>.</li>
+<li><font color="red"><strong>[Call for papers]</strong></font> We are organising <a href="http://ssci2019.org/esco.html" target="_blank"><strong>IEEE Symposium on Evolutionary scheduling and combinatorial optimisation (IEEE ESCO)</strong></a>. Submission due date: <strong><del>July 10</del><font color="red">August 1</font>, 2019</strong>.</li>
 </ul>
 
 <h3 id="biography">Biography</h3>
