--- a/404.html
+++ b/404.html
@@ -394,6 +394,14 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/ardeh-2019-novel/">A Novel Genetic Programming Algorithm with Knowledge Transfer for Uncertain Capacitated Arc Routing</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/abdollahi-2019-stratifying/">Stratifying risk of coronary artery disease using discriminative knowledge-guided medical concept pairings from clinical notes</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/zhang-2019-two/">A Two-Stage Genetic Programming Hyper-heuristic Approach with Feature Selection for Dynamic Flexible Job Shop Scheduling</a></li>
   </ul>
   
@@ -403,14 +411,6 @@
   
   <ul>
     <li><a href="/publication/wang-2019-novel/">Novel Ensemble Genetic Programming Hyper-Heuristics for Uncertain Capacitated Arc Routing Problem</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/tan-2019-novel/">Novel Genetic Algorithm with Dual Chromosome Representation for Resource Allocation in Container-based Clouds</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/tan-2019-hybrid/">A Hybrid Genetic Programming Hyper-Heuristic Approach for Online Two-level Resource Allocation in Container-based Clouds</a></li>
   </ul>
   
   
