--- a/publication/index.html
+++ b/publication/index.html
@@ -417,7 +417,15 @@
     <div class="col-lg-12">
 
       
-      <div class="article-style" itemprop="articleBody"><p>More</p>
+      <div class="article-style" itemprop="articleBody">
+
+<h3 id="compact-version">Compact version</h3>
+
+<ul>
+<li><a href="publication-journal.html"><strong>Journal Papers</strong></a></li>
+<li><a href="publication-conf.html"><strong>Conference Papers</strong></a></li>
+<li><a href="publication-chapter.html"><strong>Book Chapters</strong></a></li>
+</ul>
 </div>
       
 
