--- a/publication/index.html
+++ b/publication/index.html
@@ -422,9 +422,9 @@
 <h3 id="compact-version">Compact version</h3>
 
 <ul>
-<li><a href="publication-journal.html"><strong>Journal Papers</strong></a></li>
-<li><a href="publication-conf.html"><strong>Conference Papers</strong></a></li>
-<li><a href="publication-chapter.html"><strong>Book Chapters</strong></a></li>
+<li><a href="https://meiyi1986.github.io/publication-journal.html">Journal Papers</a></li>
+<li><a href="https://meiyi1986.github.io/publication-conf.html">Conference Papers</a></li>
+<li><a href="https://meiyi1986.github.io/publication-chapter.html">Book Chapters</a></li>
 </ul>
 </div>
       
