--- a/publication/index.html
+++ b/publication/index.html
@@ -419,13 +419,15 @@
       
       <div class="article-style" itemprop="articleBody">
 
-<h3 id="compact-version">Compact version</h3>
+<h3 id="compact-list">Compact List</h3>
 
 <ul>
 <li><a href="https://meiyi1986.github.io/publication-journal.html">Journal Papers</a></li>
 <li><a href="https://meiyi1986.github.io/publication-conf.html">Conference Papers</a></li>
 <li><a href="https://meiyi1986.github.io/publication-chapter.html">Book Chapters</a></li>
 </ul>
+
+<h3 id="database">Database</h3>
 </div>
       
 
