--- a/publication/index.html
+++ b/publication/index.html
@@ -425,6 +425,7 @@
 <li><a href="https://meiyi1986.github.io/publication-journal.html">Journal Papers</a></li>
 <li><a href="https://meiyi1986.github.io/publication-conf.html">Conference Papers</a></li>
 <li><a href="https://meiyi1986.github.io/publication-chapter.html">Book Chapters</a></li>
+<li><a href="https://meiyi1986.github.io/publication-accepted.html">In Press</a></li>
 </ul>
 
 <h3 id="database">Database</h3>
