--- a/supervision/index.html
+++ b/supervision/index.html
@@ -507,7 +507,7 @@
 <h3 id="phd">PhD</h3>
 
 <ol>
-<li>Amirhossein Mostofi (Victoria University of Wellington, 2019): &ldquo;Optimisation in Pharmecautical Supply Chain Management&rdquo; (with Dr Vipul Jain)</li>
+<li><strong>Amirhossein Mostofi</strong> (Victoria University of Wellington, 2019): &ldquo;Optimisation in Pharmecautical Supply Chain Management&rdquo; (with Dr Vipul Jain)</li>
 <li>Mazhar Anzari Ardeh (Victoria University of Wellington, 2018): &ldquo;Genetic Programming and Transfer Learning for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
 <li>Fangfang Zhang (Victoria University of Wellington, 2017): &ldquo;Genetic Programming for Dynamic Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
 <li>Mahdi Abdollahi (Victoria University of Wellington, 2017): &ldquo;Evolutionary Text Mining&rdquo; (with Dr Sharon Gao, Prof Jinyan Li (UTS), and Dr Shameek Ghosh)</li>
