--- a/supervision/index.html
+++ b/supervision/index.html
@@ -508,15 +508,15 @@
 
 <ol>
 <li><strong>Amirhossein Mostofi</strong> (Victoria University of Wellington, 2019): &ldquo;Optimisation in Pharmecautical Supply Chain Management&rdquo; (with Dr Vipul Jain)</li>
-<li>Mazhar Anzari Ardeh (Victoria University of Wellington, 2018): &ldquo;Genetic Programming and Transfer Learning for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
-<li>Fangfang Zhang (Victoria University of Wellington, 2017): &ldquo;Genetic Programming for Dynamic Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
-<li>Mahdi Abdollahi (Victoria University of Wellington, 2017): &ldquo;Evolutionary Text Mining&rdquo; (with Dr Sharon Gao, Prof Jinyan Li (UTS), and Dr Shameek Ghosh)</li>
-<li>Harry He (Victoria University of Wellington, 2017): &ldquo;Optimisation of Urban Layout Design&rdquo; (with Prof Marc Aurel Schnabel)</li>
-<li>Boxiong Tan (Victoria University of Wellington, 2016): &ldquo;Evolutionary Web Service Provisioning and Scheduling&rdquo; (with Dr Hui Ma)</li>
-<li>Atiya Masood (Victoria University of Wellington, 2015): &ldquo;Many-Objective Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</li>
-<li>Binzi Xu (Jiangnan University, China): &ldquo;Evolutionary Computation for Production Scheduling&rdquo; (with Prof Yan Wang)</li>
-<li><em>John Park (Victoria University of Wellington, graduated in 2019): &ldquo;Evolving Dispatching Rules for Dynamic Job Shop Scheduling Problems using Genetic Programming&rdquo; <a href="http://researcharchive.vuw.ac.nz/handle/10063/8186">[PhD thesis]</a> (with Dr Aaron Chen, Dr Su Nguyen, and Prof Mengjie Zhang)</em></li>
-<li><em>Deepak Karunakaran (Victoria University of Wellington, graduated in 2019): &ldquo;Genetic Programming Hyper-heuristics for Dynamic Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</em></li>
+<li><strong>Mazhar Anzari Ardeh</strong> (Victoria University of Wellington, 2018): &ldquo;Genetic Programming and Transfer Learning for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
+<li><strong>Fangfang Zhang</strong> (Victoria University of Wellington, 2017): &ldquo;Genetic Programming for Dynamic Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
+<li><strong>Mahdi Abdollahi</strong> (Victoria University of Wellington, 2017): &ldquo;Evolutionary Text Mining&rdquo; (with Dr Sharon Gao, Prof Jinyan Li (UTS), and Dr Shameek Ghosh)</li>
+<li><strong>Harry He</strong> (Victoria University of Wellington, 2017): &ldquo;Optimisation of Urban Layout Design&rdquo; (with Prof Marc Aurel Schnabel)</li>
+<li><strong>Boxiong Tan</strong> (Victoria University of Wellington, 2016): &ldquo;Evolutionary Web Service Provisioning and Scheduling&rdquo; (with Dr Hui Ma)</li>
+<li><strong>Atiya Masood</strong> (Victoria University of Wellington, 2015): &ldquo;Many-Objective Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</li>
+<li><strong>Binzi Xu</strong> (Jiangnan University, China): &ldquo;Evolutionary Computation for Production Scheduling&rdquo; (with Prof Yan Wang)</li>
+<li><em><strong>John Park</strong> (Victoria University of Wellington, graduated in 2019): &ldquo;Evolving Dispatching Rules for Dynamic Job Shop Scheduling Problems using Genetic Programming&rdquo; <a href="http://researcharchive.vuw.ac.nz/handle/10063/8186">[PhD thesis]</a> (with Dr Aaron Chen, Dr Su Nguyen, and Prof Mengjie Zhang)</em></li>
+<li><em><strong>Deepak Karunakaran</strong> (Victoria University of Wellington, graduated in 2019): &ldquo;Genetic Programming Hyper-heuristics for Dynamic Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</em></li>
 <li><em>Alexandre Sawczuk Da Silva (Victoria University of Wellington, graduated in 2019): &ldquo;Evolutionary Computation for Multifaceted Web Service Composition&rdquo; <a href="http://researcharchive.vuw.ac.nz/handle/10063/8014">[PhD thesis]</a> (with Dr Hui Ma, and Prof Mengjie Zhang)</em></li>
 <li><em>Md. Jakirul Islam (RMIT University, Australia, graduated in 2018): &ldquo;Structural Optimization Using Evolutionary Multimodal and Bilevel Optimization Techniques&rdquo; <a href="http://researchbank.rmit.edu.au/eserv/rmit:162527/Islam.pdf">[PhD thesis]</a> (with Prof Xiaodong Li)</em></li>
 <li><em>Yuxin Liu (Southwestern University, China, graduated in 2018): &ldquo;Bio-inspired Route Optimization and Source Identification&rdquo; <a href="http://gb.oversea.cnki.net/KCMS/detail/detail.aspx?filename=1018859716.nh&dbcode=CDFD&dbname=CDFDREF">[PhD thesis (in Chinese)]</a> (with Prof Mengjie Zhang, and Prof Zili Zhang)</em></li>
