--- a/supervision/index.html
+++ b/supervision/index.html
@@ -517,43 +517,43 @@
 <li><strong>Binzi Xu</strong> (Jiangnan University, China): &ldquo;Evolutionary Computation for Production Scheduling&rdquo; (with Prof Yan Wang)</li>
 <li><em><strong>John Park</strong> (Victoria University of Wellington, graduated in 2019): &ldquo;Evolving Dispatching Rules for Dynamic Job Shop Scheduling Problems using Genetic Programming&rdquo; <a href="http://researcharchive.vuw.ac.nz/handle/10063/8186">[PhD thesis]</a> (with Dr Aaron Chen, Dr Su Nguyen, and Prof Mengjie Zhang)</em></li>
 <li><em><strong>Deepak Karunakaran</strong> (Victoria University of Wellington, graduated in 2019): &ldquo;Genetic Programming Hyper-heuristics for Dynamic Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</em></li>
-<li><em>Alexandre Sawczuk Da Silva (Victoria University of Wellington, graduated in 2019): &ldquo;Evolutionary Computation for Multifaceted Web Service Composition&rdquo; <a href="http://researcharchive.vuw.ac.nz/handle/10063/8014">[PhD thesis]</a> (with Dr Hui Ma, and Prof Mengjie Zhang)</em></li>
-<li><em>Md. Jakirul Islam (RMIT University, Australia, graduated in 2018): &ldquo;Structural Optimization Using Evolutionary Multimodal and Bilevel Optimization Techniques&rdquo; <a href="http://researchbank.rmit.edu.au/eserv/rmit:162527/Islam.pdf">[PhD thesis]</a> (with Prof Xiaodong Li)</em></li>
-<li><em>Yuxin Liu (Southwestern University, China, graduated in 2018): &ldquo;Bio-inspired Route Optimization and Source Identification&rdquo; <a href="http://gb.oversea.cnki.net/KCMS/detail/detail.aspx?filename=1018859716.nh&dbcode=CDFD&dbname=CDFDREF">[PhD thesis (in Chinese)]</a> (with Prof Mengjie Zhang, and Prof Zili Zhang)</em></li>
-<li><em>Jing Xie (RMIT University, Australia, graduated in 2017): &ldquo;On the Investigation of the Large-Scale
+<li><em><strong>Alexandre Sawczuk Da Silva</strong> (Victoria University of Wellington, graduated in 2019): &ldquo;Evolutionary Computation for Multifaceted Web Service Composition&rdquo; <a href="http://researcharchive.vuw.ac.nz/handle/10063/8014">[PhD thesis]</a> (with Dr Hui Ma, and Prof Mengjie Zhang)</em></li>
+<li><em><strong>Md. Jakirul Islam</strong> (RMIT University, Australia, graduated in 2018): &ldquo;Structural Optimization Using Evolutionary Multimodal and Bilevel Optimization Techniques&rdquo; <a href="http://researchbank.rmit.edu.au/eserv/rmit:162527/Islam.pdf">[PhD thesis]</a> (with Prof Xiaodong Li)</em></li>
+<li><em><strong>Yuxin Liu</strong> (Southwestern University, China, graduated in 2018): &ldquo;Bio-inspired Route Optimization and Source Identification&rdquo; <a href="http://gb.oversea.cnki.net/KCMS/detail/detail.aspx?filename=1018859716.nh&dbcode=CDFD&dbname=CDFDREF">[PhD thesis (in Chinese)]</a> (with Prof Mengjie Zhang, and Prof Zili Zhang)</em></li>
+<li><em><strong>Jing Xie</strong> (RMIT University, Australia, graduated in 2017): &ldquo;On the Investigation of the Large-Scale
 Grouping Constrained Storage Location Assignment Problem&rdquo; <a href="https://researchbank.rmit.edu.au/eserv/rmit:162142/Xie.pdf">[PhD thesis]</a> (with Dr Andy Song, Prof Andreas Ernst, and Prof Xiaodong Li)</em></li>
 </ol>
 
 <h3 id="masters">Masters</h3>
 
 <ol>
-<li>Shaolin Wang (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
-<li><em>Boxiong Tan (Victoria University of Wellington, graduated in 2016): &ldquo;Evolutionary Computation for Service Location Allocation&rdquo; (with Dr Hui Ma)</em></li>
-<li><em>Youhan Xia (University of Melbourne, Australia, graduated in 2017): &ldquo;Ant Colony System for Itinerary Planning with Restaurants&rdquo; (with Dr Jeffrey Chan)</em></li>
-<li><em>Haobo Fu (University of Science and Technology of China, graduated in 2010): &ldquo;Meta-heuristics for Capacitated Arc Routing Problems&rdquo; (with Prof Ke Tang)</em></li>
+<li><strong>Shaolin Wang</strong> (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
+<li><em><strong>Boxiong Tan</strong> (Victoria University of Wellington, graduated in 2016): &ldquo;Evolutionary Computation for Service Location Allocation&rdquo; (with Dr Hui Ma)</em></li>
+<li><em><strong>Youhan Xia</strong> (University of Melbourne, Australia, graduated in 2017): &ldquo;Ant Colony System for Itinerary Planning with Restaurants&rdquo; (with Dr Jeffrey Chan)</em></li>
+<li><em><strong>Haobo Fu</strong> (University of Science and Technology of China, graduated in 2010): &ldquo;Meta-heuristics for Capacitated Arc Routing Problems&rdquo; (with Prof Ke Tang)</em></li>
 </ol>
 
 <h3 id="honours-students">Honours Students</h3>
 
 <ul>
-<li>Rhaz Solomon (Victoria University of Wellington, 2019): &ldquo;Bloat Control in Genetic Programming&rdquo;</li>
-<li>Samuel Meredith (Victoria University of Wellington, 2018): &ldquo;Genetic Programming for Dynamic Orienteering Problem&rdquo;</li>
-<li>Michael Sirvid (Victoria University of Wellington, 2018): &ldquo;Genetic Programming for Online Bin Packing&rdquo;</li>
-<li>Valerie Chan (Victoria University of Wellington, 2017): &ldquo;Evolutionary Computation for Dynamic Orienteering Problem&rdquo;</li>
-<li>Daniel Yska (Victoria University of Wellington, 2017): &ldquo;Genetic Programming Hyper-heuristics for Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
+<li><strong>Rhaz Solomon</strong> (Victoria University of Wellington, 2019): &ldquo;Bloat Control in Genetic Programming&rdquo;</li>
+<li><strong>Samuel Meredith</strong> (Victoria University of Wellington, 2018): &ldquo;Genetic Programming for Dynamic Orienteering Problem&rdquo;</li>
+<li><strong>Michael Sirvid</strong> (Victoria University of Wellington, 2018): &ldquo;Genetic Programming for Online Bin Packing&rdquo;</li>
+<li><strong>Valerie Chan</strong> (Victoria University of Wellington, 2017): &ldquo;Evolutionary Computation for Dynamic Orienteering Problem&rdquo;</li>
+<li><strong>Daniel Yska</strong> (Victoria University of Wellington, 2017): &ldquo;Genetic Programming Hyper-heuristics for Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
 </ul>
 
 <h3 id="summer-research-scholarship-students">Summer Research Scholarship Students</h3>
 
 <ul>
-<li>Shaolin Wang (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
-<li>Jordan MacLachlan (Victoria University of Wellington, 2017): &ldquo;Evolutionary Computation for Dynamic Arc Routing&rdquo;</li>
-<li>Daniel Yska (Victoria University of Wellington, 2017): &ldquo;Genetic Programming Hyper-heuristics for Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
-<li>Josiah Jacobsen-Grocott (Victoria University of Wellington, 2016): &ldquo;Evolutionary Computation for Dynamic Vehicle Routing&rdquo;</li>
-<li>Scott Holdaway (Victoria University of Wellington, 2016): &ldquo;Feature Extraction in NEAT for Atari Games&rdquo; (with Dr Aaron Chen)</li>
-<li>Will Hardwick-Smith (Victoria University of Wellington, 2016): &ldquo;Transfer Learning in NEAT for Atari Games&rdquo; (with Dr Aaron Chen)</li>
-<li>Michael Riley (Victoria University of Wellington, 2015): &ldquo;Evolutionary Computation for Dynamic Job Shop Scheduling&rdquo;</li>
-<li>Longfei Yan (Victoria University of Wellington, 2015): &ldquo;Evolutionary Web Service Composition&rdquo; (with Dr Hui Ma)</li>
+<li><strong>Shaolin Wang</strong> (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
+<li><strong>Jordan MacLachlan</strong> (Victoria University of Wellington, 2017): &ldquo;Evolutionary Computation for Dynamic Arc Routing&rdquo;</li>
+<li><strong>Daniel Yska</strong> (Victoria University of Wellington, 2017): &ldquo;Genetic Programming Hyper-heuristics for Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
+<li><strong>Josiah Jacobsen-Grocott</strong> (Victoria University of Wellington, 2016): &ldquo;Evolutionary Computation for Dynamic Vehicle Routing&rdquo;</li>
+<li><strong>Scott Holdaway</strong> (Victoria University of Wellington, 2016): &ldquo;Feature Extraction in NEAT for Atari Games&rdquo; (with Dr Aaron Chen)</li>
+<li><strong>Will Hardwick-Smith</strong> (Victoria University of Wellington, 2016): &ldquo;Transfer Learning in NEAT for Atari Games&rdquo; (with Dr Aaron Chen)</li>
+<li><strong>Michael Riley</strong> (Victoria University of Wellington, 2015): &ldquo;Evolutionary Computation for Dynamic Job Shop Scheduling&rdquo;</li>
+<li><strong>Longfei Yan</strong> (Victoria University of Wellington, 2015): &ldquo;Evolutionary Web Service Composition&rdquo; (with Dr Hui Ma)</li>
 </ul>
 
     </div>
