--- a/index.html
+++ b/index.html
@@ -543,9 +543,8 @@
 <h3 id="news">NEWS</h3>
 
 <ul>
-<li><p><font color="red"><strong>[PhD Vacancy]</strong></font> I am looking for PhD/MSc/Honours/Summer Research students in <strong>Evolutionary Computation and Machine Learning for Scheduling and Combinatorial Optimisation</strong>. If you have similar research interests with me, please do not hesitate to <a href="#contact">contact</a> me.</p>
-
-<h1 id="font-color-red-call-for-papers-font-we-are-organising-ieee-symposium-on-evolutionary-scheduling-and-combinatorial-optimisation-ieee-esco-http-ssci2019-org-esco-html-submission-due-date-july-10-font-color-red-august-1-font-2019">- <font color="red"><strong>[Call for papers]</strong></font> We are organising <a href="http://ssci2019.org/esco.html" target="_blank"><strong>IEEE Symposium on Evolutionary scheduling and combinatorial optimisation (IEEE ESCO)</strong></a>. Submission due date: <strong><del>July 10</del><font color="red">August 1</font>, 2019</strong>.</h1></li>
+<li><font color="red"><strong>[PhD Vacancy]</strong></font> I am looking for PhD/MSc/Honours/Summer Research students in <strong>Evolutionary Computation and Machine Learning for Scheduling and Combinatorial Optimisation</strong>. If you have similar research interests with me, please do not hesitate to <a href="#contact">contact</a> me.
+<!-- - <font color="red">**[Call for papers]**</font> We are organising [**IEEE Symposium on Evolutionary scheduling and combinatorial optimisation (IEEE ESCO)**](http://ssci2019.org/esco.html). Submission due date: **~~July 10~~<font color="red">August 1</font>, 2019**. --></li>
 </ul>
 
 <h3 id="biography">Biography</h3>
