--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -75,9 +75,9 @@ Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
  Can stochastic dispatching rules evolved by genetic programming
   hyper-heuristics help in dynamic flexible job shop scheduling?
  In <em>Proceedings of the IEEE Congress on Evolutionary Computation
-  (CEC)</em>. IEEE, jun 2019.
+  (CEC)</em>, pages 41--48. IEEE, jun 2019.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2019can">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC.2019.8790030">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -92,9 +92,9 @@ Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
  Evolving dispatching rules for multi-objective dynamic flexible job
   shop scheduling via genetic programming hyper-heuristics.
  In <em>Proceedings of the IEEE Congress on Evolutionary Computation
-  (CEC)</em>. IEEE, jun 2019.
+  (CEC)</em>, pages 1366--1373. IEEE, jun 2019.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2019evolving">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC.2019.8790112">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -109,9 +109,9 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
  Transfer learning in genetic programming hyper-heuristic for solving
   uncertain capacitated arc routing problem.
  In <em>Proceedings of the IEEE Congress on Evolutionary Computation
-  (CEC)</em>. IEEE, jun 2019.
+  (CEC)</em>, pages 49--56. IEEE, jun 2019.
 [&nbsp;<a href="publication-accepted_bib.html#ardeh2019transfer">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC.2019.8789920">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -126,9 +126,9 @@ Deepak Karunakaran, Yi&nbsp;Mei, Gang Chen, and Mengjie Zhang.
  Active sampling for dynamic job shop scheduling using genetic
   programming.
  In <em>Proceedings of the IEEE Congress on Evolutionary Computation
-  (CEC)</em>. IEEE, jun 2019.
+  (CEC)</em>, pages 434--441. IEEE, jun 2019.
 [&nbsp;<a href="publication-accepted_bib.html#karunakaran2019active">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC.2019.8789923">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -143,9 +143,9 @@ Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
  A hybrid genetic programming hyper-heuristic approach for online
   two-level resource allocation in container-based clouds.
  In <em>Proceedings of the IEEE Congress on Evolutionary Computation
-  (CEC)</em>. IEEE, jun 2019.
+  (CEC)</em>, pages 2681--2688. IEEE, jun 2019.
 [&nbsp;<a href="publication-accepted_bib.html#tan2019hybrid">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC.2019.8790220">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -160,9 +160,9 @@ Mahdi Abdollahi, Xiaoying Gao, Yi&nbsp;Mei, Shameek Ghosh, and Jinyan Li.
  An ontology-based two-stage approach to medical text classification
   with feature selection by particle swarm optimisation.
  In <em>Proceedings of the IEEE Congress on Evolutionary Computation
-  (CEC)</em>. IEEE, jun 2019.
+  (CEC)</em>, pages 119--126. IEEE, jun 2019.
 [&nbsp;<a href="publication-accepted_bib.html#abdollahi2019ontology">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CEC.2019.8790259">DOI</a>&nbsp;]
 
 </td>
 </tr>
