--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -51,11 +51,11 @@
   title = {Can Stochastic Dispatching Rules Evolved by Genetic Programming Hyper-heuristics Help in Dynamic Flexible Job Shop Scheduling?},
   author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
-  pages = {},
+  pages = {41--48},
   year = {2019},
   month = {jun},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC.2019.8790030}
 }
 </pre>
 
@@ -64,11 +64,11 @@
   title = {Evolving Dispatching Rules for Multi-objective Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics},
   author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
-  pages = {},
+  pages = {1366--1373},
   year = {2019},
   month = {jun},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC.2019.8790112}
 }
 </pre>
 
@@ -77,11 +77,11 @@
   title = {Transfer Learning in Genetic Programming Hyper-heuristic for Solving Uncertain Capacitated Arc Routing Problem},
   author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
-  pages = {},
+  pages = {49--56},
   year = {2019},
   month = {jun},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC.2019.8789920}
 }
 </pre>
 
@@ -90,11 +90,11 @@
   title = {Active Sampling for Dynamic Job Shop Scheduling using Genetic Programming},
   author = {Karunakaran, Deepak and Mei, Yi and Chen, Gang and Zhang, Mengjie},
   booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
-  pages = {},
+  pages = {434--441},
   year = {2019},
   month = {jun},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC.2019.8789923}
 }
 </pre>
 
@@ -103,11 +103,11 @@
   title = {A Hybrid Genetic Programming Hyper-Heuristic Approach for Online Two-level Resource Allocation in Container-based Clouds},
   author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
   booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
-  pages = {},
+  pages = {2681--2688},
   year = {2019},
   month = {jun},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC.2019.8790220}
 }
 </pre>
 
@@ -116,11 +116,11 @@
   title = {An Ontology-based Two-Stage Approach to Medical Text Classification with Feature Selection by Particle Swarm Optimisation},
   author = {Abdollahi, Mahdi and Gao, Xiaoying and Mei, Yi and Ghosh, Shameek and Li, Jinyan},
   booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
-  pages = {},
+  pages = {119--126},
   year = {2019},
   month = {jun},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/CEC.2019.8790259}
 }
 </pre>
 
