--- a/publication-chapter.html
+++ b/publication-chapter.html
@@ -26,8 +26,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
  In <em>Evolutionary Computation for Dynamic Optimization Problems</em>,
   pages 377--401. Springer, 2013.
 [&nbsp;<a href="publication-chapter_bib.html#mei2013evolutionary">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1007/978-3-642-38416-5_15">DOI</a>&nbsp;| 
-<a href="papers/BookChapter-ECDCARP.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1007/978-3-642-38416-5_15">DOI</a>&nbsp;]
 
 </td>
 </tr>
