--- a/publication-journal.html
+++ b/publication-journal.html
@@ -58,8 +58,7 @@ Su&nbsp;Nguyen, Yi&nbsp;Mei, Bing Xue, and Mengjie Zhang.
   dispatching rules.
  <em>Evolutionary Computation</em>, in Press, 2018.
 [&nbsp;<a href="publication-journal_bib.html#nguyen2018hybrid">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1162/evco_a_00230">DOI</a>&nbsp;| 
-<a href="papers/ECJ18-Su.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1162/evco_a_00230">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -75,8 +74,7 @@ Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
   allocation problem.
  <em>IEEE Transactions on Services Computing</em>, in Press, 2018.
 [&nbsp;<a href="publication-journal_bib.html#tan2018evolutionary">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1109/TSC.2018.2793266">DOI</a>&nbsp;| 
-<a href="papers/TSC18-Boxiong.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1109/TSC.2018.2793266">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -93,8 +91,7 @@ Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
  <em>IEEE Transactions on Cybernetics</em>, 48(1):385--398, 2018.
 [&nbsp;<a href="publication-journal_bib.html#xie2018bi">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TCYB.2016.2638820">DOI</a>&nbsp;| 
-<a href="codes/TCYB-JingXie.zip">Java Code</a>&nbsp;| 
-<a href="papers/TCYB2016-Jing.pdf">.pdf</a>&nbsp;]
+<a href="codes/TCYB-JingXie.zip">Java Code</a>&nbsp;]
 
 </td>
 </tr>
@@ -110,8 +107,7 @@ John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
   programming based hyper-heuristic approaches to dynamic job shop scheduling.
  <em>Applied Soft Computing</em>, 63:72--86, 2018.
 [&nbsp;<a href="publication-journal_bib.html#park2018investigation">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1016/j.asoc.2017.11.020">DOI</a>&nbsp;| 
-<a href="papers/ASOC17-John.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1016/j.asoc.2017.11.020">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -127,8 +123,7 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
   indirect representation approach.
  <em>Journal of Heuristics</em>, 24(3):425--456, 2018.
 [&nbsp;<a href="publication-journal_bib.html#da2018evolutionary">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1007/s10732-017-9330-4">DOI</a>&nbsp;| 
-<a href="papers/HEUR17-Alex.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1007/s10732-017-9330-4">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -146,8 +141,7 @@ Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
   Intelligence</em>, 1(5):339--353, 2017.
 [&nbsp;<a href="publication-journal_bib.html#mei2017efficient">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TETCI.2017.2743758">DOI</a>&nbsp;| 
-<a href="https://github.com/meiyi1986/GPJSS">Java Code</a>&nbsp;| 
-<a href="papers/TETCI17-MeiSuXueZhang.pdf">.pdf</a>&nbsp;]
+<a href="https://github.com/meiyi1986/GPJSS">Java Code</a>&nbsp;]
 
 </td>
 </tr>
@@ -180,8 +174,7 @@ Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
  <em>IEEE Transactions on Evolutionary Computation</em>, 21(6):929--942,
   2017.
 [&nbsp;<a href="publication-journal_bib.html#omidvar2017dg2">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1109/TEVC.2017.2694221">DOI</a>&nbsp;| 
-<a href="papers/TEVC17-DG2.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1109/TEVC.2017.2694221">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -197,8 +190,7 @@ Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
   unified framework.
  <em>Complex and Intelligent Systems</em>, 3(1):41--66, 2017.
 [&nbsp;<a href="publication-journal_bib.html#nguyen2017genetic">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1007/s40747-017-0036-x">DOI</a>&nbsp;| 
-<a href="papers/CAIS17-Nguyen.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1007/s40747-017-0036-x">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -213,8 +205,7 @@ Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D 
  Capra: A contour-based accessible path routing algorithm.
  <em>Information Sciences</em>, 385:157--173, 2017.
 [&nbsp;<a href="publication-journal_bib.html#rahaman2017capra">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1016/j.ins.2016.12.041">DOI</a>&nbsp;| 
-<a href="papers/INS17-CAPRA.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1016/j.ins.2016.12.041">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -231,8 +222,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
  <em>Applied Soft Computing</em>, 52:1130--1142, 2017.
 [&nbsp;<a href="publication-journal_bib.html#zhang2017memetic">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1016/j.asoc.2016.09.017">DOI</a>&nbsp;| 
-<a href="codes/MARD_Exp_results.rar">Results</a>&nbsp;| 
-<a href="papers/ASOC16-ZhangMeiTang.pdf">.pdf</a>&nbsp;]
+<a href="codes/MARD_Exp_results.rar">Results</a>&nbsp;]
 
 </td>
 </tr>
@@ -249,8 +239,7 @@ Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
  <em>IEEE Transactions on Evolutionary Computation</em>, 20(5):666--681,
   2016.
 [&nbsp;<a href="publication-journal_bib.html#liu2016analysis">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1109/TEVC.2015.2503422">DOI</a>&nbsp;| 
-<a href="papers/TEVC15_LiuMeiLi.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1109/TEVC.2015.2503422">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -268,8 +257,7 @@ Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
   2016.
 [&nbsp;<a href="publication-journal_bib.html#mei2016efficient">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1016/j.ejor.2016.03.053">DOI</a>&nbsp;| 
-<a href="https://github.com/meiyi1986/java-orienteering">Java Code</a>&nbsp;| 
-<a href="papers/EJOR2016-MeiSalimLi.pdf">.pdf</a>&nbsp;]
+<a href="https://github.com/meiyi1986/java-orienteering">Java Code</a>&nbsp;]
 
 </td>
 </tr>
@@ -285,8 +273,7 @@ Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
   and fitness landscape analysis.
  <em>Soft Computing</em>, 20(10):3889--3914, 2016.
 [&nbsp;<a href="publication-journal_bib.html#consoli2016dynamic">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1007/s00500-016-2126-x">DOI</a>&nbsp;| 
-<a href="papers/SOCO2016-Consoli.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1007/s00500-016-2126-x">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -302,8 +289,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
   travelling thief problem.
  <em>Soft Computing</em>, 20(1):157--172, 2016.
 [&nbsp;<a href="publication-journal_bib.html#mei2016investigation">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1007/s00500-014-1487-2">DOI</a>&nbsp;| 
-<a href="papers/SOCO2014-MeiLiYao.pdf">.pdf</a>&nbsp;]
+<a href="https://doi.org/10.1007/s00500-014-1487-2">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -321,8 +307,7 @@ Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
   2016.
 [&nbsp;<a href="publication-journal_bib.html#mei2016competitive">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1145/2791291">DOI</a>&nbsp;| 
-<a href="http://www.mathworks.com/matlabcentral/fileexchange/45783-the-cc-gdg-cmaes-algorithm">Matlab Code</a>&nbsp;| 
-<a href="papers/TOMS15MeiOmidvarLiYao.pdf">.pdf</a>&nbsp;]
+<a href="http://www.mathworks.com/matlabcentral/fileexchange/45783-the-cc-gdg-cmaes-algorithm">Matlab Code</a>&nbsp;]
 
 </td>
 </tr>
@@ -340,8 +325,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
   2014.
 [&nbsp;<a href="publication-journal_bib.html#mei2014cooperative">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TEVC.2013.2281503">DOI</a>&nbsp;| 
-<a href="codes/RDG-MAENS.zip">C Code</a>&nbsp;| 
-<a href="papers/TEVC13_MeiLiYao.pdf">.pdf</a>&nbsp;]
+<a href="codes/RDG-MAENS.zip">C Code</a>&nbsp;]
 
 </td>
 </tr>
@@ -359,8 +343,7 @@ Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
   2014.
  <b style="color:red;">(TEVC Outstanding Paper Award)</b> [&nbsp;<a href="publication-journal_bib.html#omidvar2014cooperative"nbsp;<a href="publication-journal_bib.html#omidvar2014cooperative">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TEVC.2013.2281543">DOI</a>&nbsp;| 
-<a href="https://bitbucket.org/mno/differential-grouping">Matlab Code</a>&nbsp;| 
-<a href="papers/TEVC13_OmidvarLiMeiYao.pdf">.pdf</a>&nbsp;]
+<a href="https://bitbucket.org/mno/differential-grouping">Matlab Code</a>&nbsp;]
 
 </td>
 </tr>
@@ -377,8 +360,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
   (Cybernetics)</em>, 41(6):1654--1667, 2011.
 [&nbsp;<a href="publication-journal_bib.html#mei2011memetic">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TSMCB.2011.2158307">DOI</a>&nbsp;| 
-<a href="codes/MARM_ExpResults.zip">Results</a>&nbsp;| 
-<a href="papers/TSMCB11_MeiTangYao.pdf">.pdf</a>&nbsp;]
+<a href="codes/MARM_ExpResults.zip">Results</a>&nbsp;]
 
 </td>
 </tr>
@@ -396,8 +378,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
   2011.
 [&nbsp;<a href="publication-journal_bib.html#mei2011decomposition">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TEVC.2010.2051446">DOI</a>&nbsp;| 
-<a href="codes/D-MAENS.zip">C Code</a>&nbsp;| 
-<a href="papers/TEVC11_MeiTangYao.pdf">.pdf</a>&nbsp;]
+<a href="codes/D-MAENS.zip">C Code</a>&nbsp;]
 
 </td>
 </tr>
@@ -415,8 +396,7 @@ Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
   13(5):1151--1166, 2009.
 [&nbsp;<a href="publication-journal_bib.html#tang2009memetic">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TEVC.2009.2023449">DOI</a>&nbsp;| 
-<a href="codes/MAENS.zip">C Code</a>&nbsp;| 
-<a href="papers/TEVC10_TangMeiYao.pdf">.pdf</a>&nbsp;]
+<a href="codes/MAENS.zip">C Code</a>&nbsp;]
 
 </td>
 </tr>
@@ -433,8 +413,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
   (Cybernetics)</em>, 39(3):723--734, 2009.
 [&nbsp;<a href="publication-journal_bib.html#mei2009global">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TSMCB.2008.2008906">DOI</a>&nbsp;| 
-<a href="codes/RTSstar.zip">C Code</a>&nbsp;| 
-<a href="papers/TSMCB09_MeiTangYao.pdf">.pdf</a>&nbsp;]
+<a href="codes/RTSstar.zip">C Code</a>&nbsp;]
 
 </td>
 </tr>
