--- a/publication/index.html
+++ b/publication/index.html
@@ -1485,6 +1485,17 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -1492,6 +1503,11 @@
 
 
 
+
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC.2019.8789920" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
@@ -1578,6 +1594,17 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -1585,6 +1612,11 @@
 
 
 
+
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC.2019.8790112" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
@@ -1671,6 +1703,17 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -1678,6 +1721,11 @@
 
 
 
+
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC.2019.8790030" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
@@ -1786,6 +1834,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC.2019.8790259" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -1878,6 +1930,17 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -1885,6 +1948,11 @@
 
 
 
+
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC.2019.8789923" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
@@ -1971,6 +2039,17 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -1978,6 +2057,11 @@
 
 
 
+
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CEC.2019.8790220" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
