--- a/publication-chapter_bib.html
+++ b/publication-chapter_bib.html
@@ -15,8 +15,7 @@
   pages = {377--401},
   year = {2013},
   publisher = {Springer},
-  pdf = {papers/BookChapter-ECDCARP.pdf},
-  doi = {https://doi.org/10.1007/978-3-642-38416-5_15}
+  doi = {10.1007/978-3-642-38416-5_15}
 }
 </pre>
 
