--- a/publication/karunakaran-2019-active/index.html
+++ b/publication/karunakaran-2019-active/index.html
@@ -577,6 +577,17 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -584,6 +595,11 @@
 
 
 
+
+
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1109/CEC.2019.8789923" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
