--- a/publication-conf_bib.html
+++ b/publication-conf_bib.html
@@ -46,6 +46,84 @@
 }
 </pre>
 
+<a name="zhang2019can"></a><pre>
+@inproceedings{<a href="publication-conf.html#zhang2019can">zhang2019can</a>,
+  title = {Can Stochastic Dispatching Rules Evolved by Genetic Programming Hyper-heuristics Help in Dynamic Flexible Job Shop Scheduling?},
+  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
+  pages = {41--48},
+  year = {2019},
+  month = {jun},
+  organization = {IEEE},
+  doi = {10.1109/CEC.2019.8790030}
+}
+</pre>
+
+<a name="zhang2019evolving"></a><pre>
+@inproceedings{<a href="publication-conf.html#zhang2019evolving">zhang2019evolving</a>,
+  title = {Evolving Dispatching Rules for Multi-objective Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics},
+  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
+  pages = {1366--1373},
+  year = {2019},
+  month = {jun},
+  organization = {IEEE},
+  doi = {10.1109/CEC.2019.8790112}
+}
+</pre>
+
+<a name="ardeh2019transfer"></a><pre>
+@inproceedings{<a href="publication-conf.html#ardeh2019transfer">ardeh2019transfer</a>,
+  title = {Transfer Learning in Genetic Programming Hyper-heuristic for Solving Uncertain Capacitated Arc Routing Problem},
+  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
+  pages = {49--56},
+  year = {2019},
+  month = {jun},
+  organization = {IEEE},
+  doi = {10.1109/CEC.2019.8789920}
+}
+</pre>
+
+<a name="karunakaran2019active"></a><pre>
+@inproceedings{<a href="publication-conf.html#karunakaran2019active">karunakaran2019active</a>,
+  title = {Active Sampling for Dynamic Job Shop Scheduling using Genetic Programming},
+  author = {Karunakaran, Deepak and Mei, Yi and Chen, Gang and Zhang, Mengjie},
+  booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
+  pages = {434--441},
+  year = {2019},
+  month = {jun},
+  organization = {IEEE},
+  doi = {10.1109/CEC.2019.8789923}
+}
+</pre>
+
+<a name="tan2019hybrid"></a><pre>
+@inproceedings{<a href="publication-conf.html#tan2019hybrid">tan2019hybrid</a>,
+  title = {A Hybrid Genetic Programming Hyper-Heuristic Approach for Online Two-level Resource Allocation in Container-based Clouds},
+  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
+  booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
+  pages = {2681--2688},
+  year = {2019},
+  month = {jun},
+  organization = {IEEE},
+  doi = {10.1109/CEC.2019.8790220}
+}
+</pre>
+
+<a name="abdollahi2019ontology"></a><pre>
+@inproceedings{<a href="publication-conf.html#abdollahi2019ontology">abdollahi2019ontology</a>,
+  title = {An Ontology-based Two-Stage Approach to Medical Text Classification with Feature Selection by Particle Swarm Optimisation},
+  author = {Abdollahi, Mahdi and Gao, Xiaoying and Mei, Yi and Ghosh, Shameek and Li, Jinyan},
+  booktitle = {Proceedings of the IEEE Congress on Evolutionary Computation (CEC)},
+  pages = {119--126},
+  year = {2019},
+  month = {jun},
+  organization = {IEEE},
+  doi = {10.1109/CEC.2019.8790259}
+}
+</pre>
+
 <a name="zhang2019new"></a><pre>
 @inproceedings{<a href="publication-conf.html#zhang2019new">zhang2019new</a>,
   title = {A New Representation in Genetic Programming for Evolving Dispatching Rules for Dynamic Flexible Job Shop Scheduling},
