--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/08/13, 2019/08/06, Kirita-Rose Escott, discussions on research directions. 2019/07/30, Whole Group, discussions about lexicase selection in GP. 2019/07/23, Whole Group, share experience in GECCO2019. 2019/07/16, Shaolin Wang, practice on GECCO presentation again. 2019/07/09, Mazhar Anzari Ardeh, practice on PRICAI presentation. 2019/07/09, Mahdi Abdollahi, practice on PRICAI presentation. 2019/07/02, Boxiong Tan, practice on GECCO 2019 presentation. 2019/07/02, Shaolin Wang, practice on GECCO 2019 presentation. 2019/06/25, Mazhar Anzari Ardeh, practice on PhD proposal seminar.">
+  <meta name="description" content="2019/08/20, 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition. 2019/08/06, Kirita-Rose Escott, discussions on research directions. 2019/07/30, Whole Group, discussions about lexicase selection in GP. 2019/07/23, Whole Group, share experience in GECCO2019. 2019/07/16, Shaolin Wang, practice on GECCO presentation again. 2019/07/09, Mazhar Anzari Ardeh, practice on PRICAI presentation. 2019/07/09, Mahdi Abdollahi, practice on PRICAI presentation. 2019/07/02, Boxiong Tan, practice on GECCO 2019 presentation.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/08/13, 2019/08/06, Kirita-Rose Escott, discussions on research directions. 2019/07/30, Whole Group, discussions about lexicase selection in GP. 2019/07/23, Whole Group, share experience in GECCO2019. 2019/07/16, Shaolin Wang, practice on GECCO presentation again. 2019/07/09, Mazhar Anzari Ardeh, practice on PRICAI presentation. 2019/07/09, Mahdi Abdollahi, practice on PRICAI presentation. 2019/07/02, Boxiong Tan, practice on GECCO 2019 presentation. 2019/07/02, Shaolin Wang, practice on GECCO 2019 presentation. 2019/06/25, Mazhar Anzari Ardeh, practice on PhD proposal seminar."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/08/20, 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition. 2019/08/06, Kirita-Rose Escott, discussions on research directions. 2019/07/30, Whole Group, discussions about lexicase selection in GP. 2019/07/23, Whole Group, share experience in GECCO2019. 2019/07/16, Shaolin Wang, practice on GECCO presentation again. 2019/07/09, Mazhar Anzari Ardeh, practice on PRICAI presentation. 2019/07/09, Mahdi Abdollahi, practice on PRICAI presentation. 2019/07/02, Boxiong Tan, practice on GECCO 2019 presentation."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,7 +503,8 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li>2019/08/13,</li>
+<li>2019/08/20,</li>
+<li>2019/08/13, <strong><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></strong>, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition.</li>
 <li>2019/08/06, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, discussions on research directions.</li>
 <li>2019/07/30, <strong>Whole Group</strong>, discussions about lexicase selection in GP.</li>
 <li>2019/07/23, <strong>Whole Group</strong>, share experience in GECCO2019.</li>
