--- a/ecco/index.html
+++ b/ecco/index.html
@@ -519,6 +519,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="http://homepages.ecs.vuw.ac.nz/~mengjie/">Prof. Mengjie Zhang</a>: Evolutionary Computation and Machine Learning, Genetic Programming, Image Processing, Feature Selection</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/AaronChen">Dr. Aaron Chen</a>: Reinforcement Learning, NeuroEvolution (NEAT), Evolutionary Computation for Games, Evolutionary Scheduling</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/HuiMa">Dr. Hui Ma</a>: Evolutionary Resource Allocation, Web Service Composition, Cloud Computing</li>
+<li><a href="https://ecs.victoria.ac.nz/Main/YahuiJia">Yahui Jia</a>: Evolutionary Combinatorial Optimisation, Large-Scale Optimisation</li>
 <li><a href="https://www.victoria.ac.nz/som/about/staff/vipul-jain">Dr. Vipul Jain</a>: Supply Chain Management, Operations Research</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Alexandre Sawczuk da Silva</a>: Evolutionary Web Service Composition and Combinatorial Optimisation</li>
 <li><a href="https://evoscheduling.wordpress.com/">Dr. Su Nguyen (Australia)</a>: Evolutionary Scheduling and Combinatorial Optimisation, Hyper-heuristics, Genetic Programming</li>
