--- a/ecco/index.html
+++ b/ecco/index.html
@@ -519,10 +519,9 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="http://homepages.ecs.vuw.ac.nz/~mengjie/">Prof. Mengjie Zhang</a>: Evolutionary Computation and Machine Learning, Genetic Programming, Image Processing, Feature Selection</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/AaronChen">Dr. Aaron Chen</a>: Reinforcement Learning, NeuroEvolution (NEAT), Evolutionary Computation for Games, Evolutionary Scheduling</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/HuiMa">Dr. Hui Ma</a>: Evolutionary Resource Allocation, Web Service Composition, Cloud Computing</li>
-<li><a href="https://ecs.victoria.ac.nz/Main/YahuiJia">Yahui Jia</a>: Evolutionary Combinatorial Optimisation, Large-Scale Optimisation</li>
+<li><a href="https://ecs.victoria.ac.nz/Main/YahuiJia">Dr. Yahui Jia</a>: Evolutionary Combinatorial Optimisation, Large-Scale Optimisation</li>
 <li><a href="https://www.victoria.ac.nz/som/about/staff/vipul-jain">Dr. Vipul Jain</a>: Supply Chain Management, Operations Research</li>
-<li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Alexandre Sawczuk da Silva</a>: Evolutionary Web Service Composition and Combinatorial Optimisation</li>
-<li><a href="https://evoscheduling.wordpress.com/">Dr. Su Nguyen (Australia)</a>: Evolutionary Scheduling and Combinatorial Optimisation, Hyper-heuristics, Genetic Programming</li>
+<li><a href="https://evoscheduling.wordpress.com/">Dr. Su Nguyen (La Trobe University, Australia)</a>: Evolutionary Scheduling and Combinatorial Optimisation, Hyper-heuristics, Genetic Programming</li>
 </ul>
 
 <h4 id="students">Students</h4>
@@ -551,7 +550,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJohnPark">John Park (Graduated in 2019)</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradDeepakKarunakaran">Deepak Karunakaran (Graduated in 2019)</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradYimingPeng">Yiming Peng (Graduated in 2019, working in KPMG)</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Alexandre Sawczuk da Silva (Graduated in 2018, Teaching Fellow in VUW)</a></li>
+<li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Dr. Alexandre Sawczuk da Silva (Graduated in 2018, working in Huawei Munich)</a></li>
 <li><a href="https://scholar.google.co.nz/citations?user=YctRNIMAAAAJ&hl=en">Yuxin Liu (Visiting student from Southwest University, 2017-2018, graduated in 2018, Lecturer in Shanghai Maritime University)</a></li></li>
 <li><a href="http://sms.victoria.ac.nz/Main/GradRachelHunt">Rachel Hunt (Graduated in 2016)</a></li></li>
 </ul>
