--- a/ecco/index.html
+++ b/ecco/index.html
@@ -529,6 +529,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <ul>
 <li><a href="http://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></li>
+<li><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Roao Costa</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></li>
 <li><a href="https://www.victoria.ac.nz/architecture/research/current-phd-research/harry-yi-he">Harry He</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a></li>
