--- a/supervision/index.html
+++ b/supervision/index.html
@@ -528,10 +528,10 @@ Grouping Constrained Storage Location Assignment Problem&rdquo; <a href="https:/
 <h3 id="masters">Masters</h3>
 
 <ol>
-<li><strong>Shaolin Wang</strong> (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
+<li><em><strong>Haobo Fu</strong> (University of Science and Technology of China, graduated in 2010): &ldquo;Meta-heuristics for Capacitated Arc Routing Problems&rdquo; (with Prof Ke Tang)</em></li>
 <li><em><strong>Boxiong Tan</strong> (Victoria University of Wellington, graduated in 2016): &ldquo;Evolutionary Computation for Service Location Allocation&rdquo; (with Dr Hui Ma)</em></li>
 <li><em><strong>Youhan Xia</strong> (University of Melbourne, Australia, graduated in 2017): &ldquo;Ant Colony System for Itinerary Planning with Restaurants&rdquo; (with Dr Jeffrey Chan)</em></li>
-<li><em><strong>Haobo Fu</strong> (University of Science and Technology of China, graduated in 2010): &ldquo;Meta-heuristics for Capacitated Arc Routing Problems&rdquo; (with Prof Ke Tang)</em></li>
+<li><em><strong>Shaolin Wang</strong> (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</em></li>
 </ol>
 
 <h3 id="honours-students">Honours Students</h3>
